--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ input[type="radio"]:checked + label {
     width: 100%;
     background: #000;
     color: #ccc;
+    margin-top: -3em;
     padding: 1em;
     padding-bottom: 2em;
 }
